98% working ang home_test
color na lang kulang pisti

--- a/dashboard/online_help/templates/online_help/home_test.html
+++ b/dashboard/online_help/templates/online_help/home_test.html
@@ -44,7 +44,7 @@
                             </a>
                         </td>
                         <td>{{ tk.task.color }}</td>
-                        <td>From DB</td>
+                        <td>{{ tk.task.completion }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
