--- a/dashboard/online_help/templates/online_help/per_subsection_test.html
+++ b/dashboard/online_help/templates/online_help/per_subsection_test.html
@@ -10,7 +10,7 @@
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
             <h2 class="mb-0">{{ task.section }}</h2>
-            <a href="{% url 'online_help:per_user_edit_test' writer.pk task.pk %}" class="btn btn-outline-dark btn-sm">Edit</a>
+            <a href="{% url 'online_help:per_subsection_edit_test' writer.pk task.pk %}" class="btn btn-outline-dark btn-sm">Edit</a>
         </div>
         <div class="card-body">
             <div class="mb-3">
@@ -31,7 +31,7 @@
             </div>
             <div class="mb-3">
                 <h5 class="text-muted">Completion</h5>
-                <p class="font-weight-bold">insert mo completion</p>
+                <p class="font-weight-bold">{{ task.completion }}</p>
             </div>
         </div>
     </div>
