--- a/dashboard/online_help/templates/online_help/navbar.html
+++ b/dashboard/online_help/templates/online_help/navbar.html
@@ -12,7 +12,7 @@
                     <a class="nav-link {% if request.resolver_match.url_name == 'home' %}active{% endif %}" href="{% url 'online_help:home_test' %}">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if request.resolver_match.url_name == 'tasks' %}active{% endif %}" href="{% url 'online_help:tasks' %}">Tasks</a>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'tasks' %}active{% endif %}" href="{% url 'online_help:tasks_test' %}">Tasks</a>
                 </li>
                 <li class="nav-item">
                     <!-- your activities dapat -->
