--- a/dashboard/online_help/templates/online_help/per_section_test.html
+++ b/dashboard/online_help/templates/online_help/per_section_test.html
@@ -7,20 +7,23 @@
 <div class="container mt-5">
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
-            <h2 class="mb-0">Getting Started</h2>
+            <h2 class="mb-0">{{ section_name }}</h2>
             <a href="{% url 'online_help:per_section_edit' %}" class="btn btn-outline-dark btn-sm">Edit</a>
         </div>
         <div class="card-body">
             <div class="mb-3">
-                {% for section in section_user_guide %}
-                    {% for sub in section.subsections %}
-                        <h5 class="text-muted">
-                            <a href="{% url 'online_help:per_subsection_task' %}" class="hover-link text-muted">{{ sub.0 }}</a>
-                        </h5>
-                    {% endfor %}
+            {% if tasks %}
+                {% for task in tasks %}
+                    <h5 class="text-muted">
+                        <a href="{% url 'online_help:per_subsection_task' %}" class="hover-link text-muted">{{ task.sub_section }}</a>
+                    </h5>
                 {% endfor %}
+            {% else %}
+                <p class="text-muted">No tasks found for this section.</p>
+            {% endif %}
             </div>
         </div>
     </div>
 </div>
+
 {% endblock %}
