per_subsection_task_test semidone
next is add writer button and remove button

--- a/dashboard/online_help/templates/online_help/per_section_test.html
+++ b/dashboard/online_help/templates/online_help/per_section_test.html
@@ -13,11 +13,16 @@
         <div class="card-body">
             <div class="mb-3">
             {% if tasks %}
-                {% for task in tasks %}
-                    <h5 class="text-muted">
-                        <a href="{% url 'online_help:per_subsection_task' %}" class="hover-link text-muted">{{ task.sub_section }}</a>
-                    </h5>
-                {% endfor %}
+
+{% for task in tasks %}
+    <h5 class="text-muted">
+        <a href="{% url 'online_help:per_subsection_task_test' document_pk=document_pk section_pk=task.pk subsection_pk=task.pk %}" class="hover-link text-muted">
+            {{ task.sub_section }}
+        </a>
+    </h5>
+{% endfor %}
+
+
             {% else %}
                 <p class="text-muted">No tasks found for this section.</p>
             {% endif %}
