--- a/dashboard/online_help/templates/online_help/tasks_test.html
+++ b/dashboard/online_help/templates/online_help/tasks_test.html
@@ -7,7 +7,7 @@
 <div class="container mt-4">
     <div class="p-3 d-flex justify-content-between align-items-start gap-3" style="position: sticky; top: 30px; z-index: 1000;">
         <input type="text" id="searchInput" class="form-control w-75" placeholder="Search sections or subsections..." onkeyup="filterContent()">
-        <a href="{% url 'online_help:tasks_edit' %}" class="btn text-white" style="background-color: #0747a6;">Radiant Documentation</a>
+        <a href="{% url 'online_help:tasks_edit_test' %}" class="btn text-white" style="background-color: #0747a6;">Radiant Documentation</a>
     </div>
 
     <div class="row">
