--- a/dashboard/online_help/templates/online_help/per_section_test.html
+++ b/dashboard/online_help/templates/online_help/per_section_test.html
@@ -8,7 +8,9 @@
     <div class="card shadow-sm">
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
             <h2 class="mb-0">{{ section_name }}</h2>
-            <a href="{% url 'online_help:per_section_edit' %}" class="btn btn-outline-dark btn-sm">Edit</a>
+            <a href="{% url 'online_help:per_section_edit_test' section_pk=section_pk %}" class="btn btn-outline-dark btn-sm">Edit</a>
+
+            <!-- palitan dapat ng url 'online_help:per_section_edit_test' -->
         </div>
         <div class="card-body">
             <div class="mb-3">
