--- a/dashboard/online_help/templates/online_help/tasks_edit_test.html
+++ b/dashboard/online_help/templates/online_help/tasks_edit_test.html
@@ -10,7 +10,7 @@
         <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
             <h2 class="mb-0">Radiant Documentation</h2>
                 {% if first_task_id %}
-                    <a href="{% url 'online_help:documentation_edit_test' document_pk=first_task_id %}" class="btn btn-outline-dark btn-sm">Edit</a>
+                    <a href="{% url 'online_help:documentation_edit_test' %}" class="btn btn-outline-dark btn-sm">Edit</a>
                 {% endif %}
         </div>
         <div class="card-body">
