--- a/dashboard/online_help/templates/online_help/navbar.html
+++ b/dashboard/online_help/templates/online_help/navbar.html
@@ -9,11 +9,14 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">  <!-- "me-auto" aligns the left items to the left -->
                 <li class="nav-item">
-                    <a class="nav-link {% if request.resolver_match.url_name == 'home' %}active{% endif %}" href="{% url 'online_help:home_test' %}">Dashboard</a>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'home_test' %}active{% endif %}" href="{% url 'online_help:home_test' %}">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if request.resolver_match.url_name == 'tasks' %}active{% endif %}" href="{% url 'online_help:tasks_test' %}">Tasks</a>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'tasks_test' %}active{% endif %}" href="{% url 'online_help:tasks_test' %}">Tasks</a>
                 </li>
+                <!-- <li class="nav-item"> -->
+                    <!-- url 'online_help:user_activity_test' -->
+                <!-- </li> -->
                 <li class="nav-item">
                     <!-- your activities dapat -->
                     <a class="nav-link {% if request.resolver_match.url_name == 'activity' %}active{% endif %}" href="{% url 'online_help:activity' %}"></a>
