--- a/dashboard/online_help/static/css/home.css
+++ b/dashboard/online_help/static/css/home.css
@@ -40,3 +40,11 @@ body {
     border-radius: 4px;
 }
 
+.color-blue { background-color: #0747a6; }
+.color-green { background-color: #36B37E; }
+.color-red { background-color: #FF5630; }
+.color-purple { background-color: #6554C0; }
+.color-cyan { background-color: #00B8D9; }
+.color-orange { background-color: #FFAB00; }
+.color-teal { background-color: #00875A; }
+.color-yellow { background-color: #FF8B00; }
