--- a/dashboard/online_help/templates/online_help/base.html
+++ b/dashboard/online_help/templates/online_help/base.html
@@ -20,7 +20,7 @@
 
     <footer class="text-center mt-5 mb-3">
         <hr>
-        <h5>All rights reserved &copy; 2025</h5>
+        <h5>All rights reserved &copy; {% now "Y" %}</h5>
     </footer>
 
     <!-- Bootstrap JS -->
