assign_tasks_test.html still not working
hindi nakakapag save sa database

--- a/dashboard/online_help/templates/online_help/assign_task_test.html
+++ b/dashboard/online_help/templates/online_help/assign_task_test.html
@@ -6,6 +6,21 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 <h3>Assign Writer to Task</h3>
+
+{% if form.errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for field in form %}
+            {% for error in field.errors %}
+                <li><strong>{{ field.label }}:</strong> {{ error }}</li>
+            {% endfor %}
+        {% endfor %}
+        {% for error in form.non_field_errors %}
+            <li>{{ error }}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
 <form method="post" id="assignForm">
     {% csrf_token %}
     <div class="form-group">
@@ -34,10 +49,12 @@
 <!-- jQuery and Bootstrap JS -->
 
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
 $(document).ready(function () {
     $("#id_document").change(function () {
         const document = $(this).val();
+        console.log("Selected document:", document);
         $.ajax({
             url: "{% url 'online_help:ajax_load_sections' %}",
             data: { 'document': document },
@@ -68,3 +85,22 @@ $(document).ready(function () {
 </script>
 
 {% endblock %}
+
+
+    <h3>Assign Writer to Task</h3>
+
+    <!-- Display form errors -->
+    {% if form.errors %}
+    <div class="alert alert-danger">
+        <ul>
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <li><strong>{{ field.label }}:</strong> {{ error }}</li>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+    {% endif %}
